# galaxy-md

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml
res/: com.cosmic.md-viewer.desktop
src/: main.rs
