[package]
name = "galaxy-md"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "A fast, minimal markdown viewer built for COSMIC desktop"
license = "MIT"
repository = "https://github.com/goldengod503/galaxy-md"

[package.metadata.deb]
maintainer = "Peter Dassenko"
section = "utility"
depends = "$auto"
assets = [
    ["target/release/galaxy-md", "usr/bin/", "755"],
    ["res/com.galaxy.md-viewer.desktop", "usr/share/applications/", "644"],
    ["res/text-markdown.xml", "usr/share/mime/packages/", "644"],
    ["res/icons/com.galaxy.md-viewer.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["markdown", "highlighter", "tokio", "winit"]

[dependencies]
notify = "8"
open = "5"
pulldown-cmark = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
